--- a/css/index.css
+++ b/css/index.css
@@ -1,75 +1,89 @@
+@media only screen and (min-width: 1080px), only screen and (min-device-width:1080px) {
+ html,body {
+font-size:20px !important;
+ }
+ }
 @media only screen and (max-width: 1080px), only screen and (max-device-width:1080px) {
  html,body {
- font-size:16.875px;
+font-size:16.875px !important;
+  height: 100%; 
  }
  }
  @media only screen and (max-width: 960px), only screen and (max-device-width:960px) {
  html,body {
- font-size:15px;
+ font-size:15px !important;
+  height: 100%; 
  }
  }
  @media only screen and (max-width: 800px), only screen and (max-device-width:800px) {
  html,body {
- font-size:12.5px;
+ font-size:12.5px !important;
  }
  }
  @media only screen and (max-width: 720px), only screen and (max-device-width:720px) {
  html,body {
- font-size:11.25px;
+ font-size:11.25px !important;
  }
  }
  @media only screen and (max-width: 640px), only screen and (max-device-width:640px) {
  html,body {
- font-size:10px;
+ font-size:10px !important;
  }
  }
  @media only screen and (max-width: 600px), only screen and (max-device-width:600px) {
  html,body {
- font-size:9.375px;
+ font-size:9.375px !important;
  }
  }
  @media only screen and (max-width: 540px), only screen and (max-device-width:540px) {
  html,body {
- font-size:8.4375px;
+ font-size:8.4375px !important;
  }
  }
  @media only screen and (max-width: 480px), only screen and (max-device-width:480px) {
  html,body {
- font-size:7.5px;
+ font-size:7.5px !important;
  }
  }
  @media only screen and (max-width: 414px), only screen and (max-device-width:414px) {
  html,body {
- font-size:6.46875px;
+ font-size:6.46875px !important;
  }
  }
  @media only screen and (max-width: 400px), only screen and (max-device-width:400px) {
  html,body {
- font-size:6.25px;
+ font-size:6.25px !important;
  }
  }
  @media only screen and (max-width: 375px), only screen and (max-device-width:375px) {
  html,body {
- font-size:5.859375px;
+ font-size:5.859375px !important;
  }
  }
  @media only screen and (max-width: 360px), only screen and (max-device-width:360px) {
  html,body {
- font-size:5.625px;
+ font-size:5.625px !important;
  }
  }
  @media only screen and (max-width: 320px), only screen and (max-device-width:320px) {
  html,body {
- font-size:5px;
+ font-size:5px !important;
  }
  }
  @media only screen and (max-width: 240px), only screen and (max-device-width:240px) {
  html,body {
- font-size:3.75px;
+ font-size:3.75px !important;
  }
  }
 
 
+body{
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   align-content: space-between;
+   
+}
 
 
 
@@ -80,28 +94,105 @@
     padding: 0;
 }
 
-html{
+body{
     background: url("../imgs/27.jpg") no-repeat center center fixed;
    background-position:center;
    background-size: cover;
+   position: relative;
+   
 }
 
 #navBar{
-    height: 4rem;
+    height: 2.5rem;
     display: flex;
     flex-direction: row;
     align-items: center;
-    background-color: rgba(248, 248, 255, 0.3)
-    /* justify-content: space-between; */
+    background-color: rgba(248, 248, 255, 0.3);
+     justify-content: space-between; 
 }
 #navBar:hover{
-    background-color: rgba(248, 248, 255, 0.5)
+    background-color: rgba(248, 248, 255, 0.5);
+}
+
+.brand{
+    display: inline-flex;
+    flex-direction: row;
+    align-items: center;
 }
 .logo{
-    width: 3rem;
-    height: 3rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    margin-left: 1rem;
 }
 .zhiku{
-    height: 2rem;
-   margin-left: 4rem;
+    height: 1.5rem;
+    margin-left: 4rem; 
+}
+.account{
+    width: 6rem;
+    text-align: center;
+    height: 2.5rem;
+    float: right;
+    background-color: rgba(135, 206, 250, 0.5);
+    color: white;
+    line-height: 2.5rem;
+    font-size: 0.8rem;
+}
+.account:hover{
+    background-color: rgba(135, 206, 250, 0.8);
+    
+}
+.big-box{
+    /* width: 70%; */
+    margin: 5rem auto;
+    text-align: center;
+    color: white;
+}
+
+.big-font{
+    font-size: 3rem;
+    border-bottom: 0.1rem solid white;
+    border-top: 0.1rem solid white;
+    width: 100%;
+    height: 6rem;
+    line-height: 6rem;
+    
+    
+}
+.big-text{
+    font-size: 1.5rem;
+    line-height: 2.5rem;
+    margin-top: 3rem;
+}
+.box-col{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: row;
+    text-align: center;
+}
+
+.three-box{
+    width: 12rem;
+    height: 12rem;
+    background-color: rgba(248, 248, 255, 0.8);
+    box-shadow: 0.2rem 0.2rem 0.5rem  gray;
+    
+}
+.footer{
+    /* position: absolute; */
+      margin-top: 5rem;  
+    width: 100%;
+    text-align: center;
+    height: 2.5rem;
+    border-top: 0.1rem solid white;
+    color: white; 
+    bottom: 0;
+}
+.footer>div>a{
+    color: white;
+    text-decoration: none;
+}
+.small-font{
+    font-size: 0.4rem;
 }
