--- a/css/index.css
+++ b/css/index.css
@@ -9,66 +9,6 @@
         /*font-size:15px;*/
     /*}*/
 /*}*/
-@media only screen and (max-width: 800px), only screen and (max-device-width:800px) {
-    html,body {
-        font-size:12.5px;
-    }
-}
-@media only screen and (max-width: 720px), only screen and (max-device-width:720px) {
-    html,body {
-        font-size:11.25px;
-    }
-}
-@media only screen and (max-width: 640px), only screen and (max-device-width:640px) {
-    html,body {
-        font-size:10px;
-    }
-}
-@media only screen and (max-width: 600px), only screen and (max-device-width:600px) {
-    html,body {
-        font-size:9.375px;
-    }
-}
-@media only screen and (max-width: 540px), only screen and (max-device-width:540px) {
-    html,body {
-        font-size:8.4375px;
-    }
-}
-@media only screen and (max-width: 480px), only screen and (max-device-width:480px) {
-    html,body {
-        font-size:7.5px;
-    }
-}
-@media only screen and (max-width: 414px), only screen and (max-device-width:414px) {
-    html,body {
-        font-size:6.46875px;
-    }
-}
-@media only screen and (max-width: 400px), only screen and (max-device-width:400px) {
-    html,body {
-        font-size:6.25px;
-    }
-}
-@media only screen and (max-width: 375px), only screen and (max-device-width:375px) {
-    html,body {
-        font-size:5.859375px;
-    }
-}
-@media only screen and (max-width: 360px), only screen and (max-device-width:360px) {
-    html,body {
-        font-size:5.625px;
-    }
-}
-@media only screen and (max-width: 320px), only screen and (max-device-width:320px) {
-    html,body {
-        font-size:5px;
-    }
-}
-@media only screen and (max-width: 240px), only screen and (max-device-width:240px) {
-    html, body {
-        font-size: 3.75px;
-    }
-}
 
 
 
@@ -174,6 +114,19 @@ body{
     box-shadow: 0.2rem 0.2rem 0.5rem  gray;
     
 }
+
+.three-box:hover{
+    animation: bounceInUp 1s;
+    animation-fill-mode: forwards;
+}
+@keyframes bounceInUp {
+    from{
+        margin-top: 0;
+    }
+    to{
+        margin-top: -20px;
+    }
+}
 .footer{
      position: absolute;
       /*margin-top: 5rem;  */
@@ -190,4 +143,84 @@ body{
 }
 .small-font{
     font-size: 0.4rem;
+}
+
+
+
+@media only screen and (max-width: 800px), only screen and (max-device-width:800px) {
+    html,body {
+        font-size:12.5px;
+    }
+}
+@media only screen and (max-width: 720px), only screen and (max-device-width:720px) {
+    html,body {
+        font-size:11.25px;
+    }
+}
+@media only screen and (max-width: 640px), only screen and (max-device-width:640px) {
+    html,body {
+        font-size:10px;
+    }
+    .three-box{
+        width: 80%;
+        height: 5rem;
+        margin-top: 1rem;
+    }
+    @keyframes bounceInUp {
+
+    }
+    .box-col{
+        display: flex;
+        flex-direction: column;
+
+    }
+}
+@media only screen and (max-width: 600px), only screen and (max-device-width:600px) {
+    html,body {
+        font-size:9.375px;
+    }
+}
+@media only screen and (max-width: 540px), only screen and (max-device-width:540px) {
+    html,body {
+        font-size:8.4375px;
+    }
+}
+@media only screen and (max-width: 480px), only screen and (max-device-width:480px) {
+    html,body {
+        font-size:7.5px;
+    }
+}
+@media only screen and (max-width: 414px), only screen and (max-device-width:414px) {
+    html,body {
+        font-size:6.46875px;
+    }
+}
+@media only screen and (max-width: 400px), only screen and (max-device-width:400px) {
+    html,body {
+        font-size:6.25px;
+    }
+}
+@media only screen and (max-width: 375px), only screen and (max-device-width:375px) {
+    html,body {
+        font-size:5.859375px;
+    }
+}
+@media only screen and (max-width: 360px), only screen and (max-device-width:360px) {
+    html,body {
+        font-size:5.625px;
+    }
+    .zhiku{
+         height: 1.5rem;
+         margin-left: 2rem;
+     }
+}
+@media only screen and (max-width: 320px), only screen and (max-device-width:320px) {
+    html,body {
+        font-size:5px;
+    }
+}
+@media only screen and (max-width: 240px), only screen and (max-device-width:240px) {
+    html, body {
+        font-size: 3.75px;
+    }
 }
