--- a/css/school.css
+++ b/css/school.css
@@ -10,7 +10,28 @@
 }
 .mt{
     margin-top: 20px;
+    min-width: 768px;
 }
 html,body{
     background-color:  #fbf8f0;
+}
+.leftblue{
+    border-left: 5px solid #2a809d;
+    height: 20rem;
+}
+.bluefont{
+    color: #2a809d;
+    font-size: 1.8rem;
+}
+.date{
+    color: gray;
+
+}
+.firstLine{
+    display: flex;
+    align-items: baseline;
+}
+.blackline{
+    height: 2rem;
+    line-height: 2rem;
 }
