--- a/css/index.css
+++ b/css/index.css
@@ -401,3 +401,12 @@ textarea{
         padding-top: 45%;
     }
 }
+#loginOption{
+    position: relative;
+}
+#exitLogin{
+    visibility: hidden;
+    position: absolute;
+    top: 50px;
+    background-color: #f8f8f8;
+}
