--- a/css/index.css
+++ b/css/index.css
@@ -405,7 +405,7 @@ textarea{
     position: relative;
 }
 #exitLogin{
-    visibility: hidden;
+    display: none;
     position: absolute;
     top: 50px;
     background-color: #f8f8f8;
