--- a/css/school.css
+++ b/css/school.css
@@ -35,3 +35,9 @@ html,body{
     height: 2rem;
     line-height: 2rem;
 }
+.navbar-form{
+    padding-right: 10px;
+}
+#searchBtn{
+    margin-right: 20px;
+}
